# rawengine

./: CMakeLists.txt  README.md  hola.txt
src/: main.cpp  subprocess.cpp
src/engine/core/: inputs.cpp  inputs.h  logger.h  pidhelper.cpp  pidhelper.h  windows.cpp  windows.h
src/engine/stream/: file.cpp  file.h  memory.h
